--- a/ThaumAge/Packages/manifest.json
+++ b/ThaumAge/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.inputsystem": "1.0.2",
     "com.unity.jobs": "0.8.0-preview.23",
     "com.unity.render-pipelines.high-definition": "10.3.2",
+    "com.unity.render-pipelines.high-definition-config": "file:../LocalPackages/com.unity.render-pipelines.high-definition-config",
     "com.unity.test-framework": "1.1.24",
     "com.unity.textmeshpro": "3.0.4",
     "com.unity.timeline": "1.4.7",
