--- a/ThaumAge/Packages/manifest.json
+++ b/ThaumAge/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.burst": "1.5.3",
+    "com.unity.cinemachine": "2.7.3",
     "com.unity.ide.rider": "3.0.6",
     "com.unity.ide.visualstudio": "2.0.8",
     "com.unity.ide.vscode": "1.2.3",
