--- a/ThaumAge/UserSettings/Search.settings
+++ b/ThaumAge/UserSettings/Search.settings
@@ -7,12 +7,13 @@ onBoardingDoNotAskAgain = true
 showPackageIndexes = false
 showStatusBar = false
 scopes = {
-	"last_search.83F126EB" = ""
+	"last_search.83F126EB" = "Game"
 	"InspectorPreview.83F126EB" = "0"
 	"currentGroup.83F126EB" = "asset"
 	"last_search.7F95D817" = ""
 	"InspectorPreview.7F95D817" = "0"
 	"currentGroup.7F95D817" = "scene"
+	"OpenInspectorPreview.83F126EB" = "0"
 }
 providers = {
 	asset = {
@@ -50,6 +51,16 @@ providers = {
 		priority = 100
 		defaultAction = null
 	}
+	adb = {
+		active = false
+		priority = 2500
+		defaultAction = null
+	}
+	performance = {
+		active = false
+		priority = 100
+		defaultAction = null
+	}
 }
 recentSearches = [
 	"game"
@@ -59,3 +70,9 @@ searchItemFavorites = [
 ]
 savedSearchesSortOrder = 0
 showSavedSearchPanel = false
+expandedQueries = [
+]
+queryBuilder = false
+ignoredProperties = "id;name;classname;imagecontentshash"
+helperWidgetCurrentArea = "all"
+disabledIndexers = ""
