箱子和门添加

--- a/ThaumAge/UserSettings/Search.settings
+++ b/ThaumAge/UserSettings/Search.settings
@@ -14,6 +14,7 @@ scopes = {
 	"InspectorPreview.7F95D817" = "0"
 	"currentGroup.7F95D817" = "scene"
 	"OpenInspectorPreview.83F126EB" = "0"
+	"OpenInspectorPreview.7F95D817" = "0"
 }
 providers = {
 	asset = {
