--- a/ThaumAge/Packages/manifest.json
+++ b/ThaumAge/Packages/manifest.json
@@ -1,18 +1,18 @@
 {
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.addressables": "1.19.19",
-    "com.unity.burst": "1.7.0-pre.1",
+    "com.unity.addressables": "1.20.0",
+    "com.unity.burst": "1.7.1",
     "com.unity.cinemachine": "2.8.4",
-    "com.unity.ide.rider": "3.0.13",
-    "com.unity.ide.visualstudio": "2.0.14",
+    "com.unity.ide.rider": "3.0.14",
+    "com.unity.ide.visualstudio": "2.0.15",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.3.0",
     "com.unity.jobs": "0.11.0-preview.6",
-    "com.unity.render-pipelines.high-definition": "12.1.6",
+    "com.unity.render-pipelines.high-definition": "13.1.8",
     "com.unity.test-framework": "2.0.1-pre.18",
     "com.unity.textmeshpro": "3.2.0-pre.2",
-    "com.unity.timeline": "1.7.0-pre.2",
+    "com.unity.timeline": "1.7.1",
     "com.unity.ugui": "1.0.0",
     "jillejr.newtonsoft.json-for-unity": "13.0.102",
     "com.unity.modules.ai": "1.0.0",
