--- a/ThaumAge/packages.config
+++ b/ThaumAge/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Fare" version="2.1.1" targetFramework="net471" />
+  <package id="MonoGame.Framework.Portable" version="3.6.0.1625" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net471" />
+  <package id="ShaderTools" version="1.0.2.1" targetFramework="net471" />
 </packages>
