--- a/ThaumAge/UserSettings/Search.settings
+++ b/ThaumAge/UserSettings/Search.settings
@@ -21,7 +21,7 @@ scopes = {
 	"last_search.7788661B" = "Simple"
 	"OpenInspectorPreview.7788661B" = "0"
 	"currentGroup.7788661B" = "asset"
-	"last_search.E4EB812F" = "effect_2"
+	"last_search.E4EB812F" = "effect"
 	"OpenInspectorPreview.E4EB812F" = "0"
 	"currentGroup.E4EB812F" = "all"
 }
