多方块结构添加

--- a/ThaumAge/UserSettings/Search.settings
+++ b/ThaumAge/UserSettings/Search.settings
@@ -25,10 +25,18 @@ scopes = {
 	"OpenInspectorPreview.E4EB812F" = "0"
 	"currentGroup.E4EB812F" = "all"
 	"picker_window_position_offset.74AD8FDB" = "592;250;320;550"
-	"picker_search_text.74AD8FDB" = "effect"
-	"last_search.74AD8FDB" = "effect"
+	"picker_search_text.74AD8FDB" = "effect EFFECT eff"
+	"last_search.74AD8FDB" = "effect EFFECT eff"
 	"OpenInspectorPreview.74AD8FDB" = "0"
 	"currentGroup.74AD8FDB" = "all"
+	"picker_window_position_offset.7E63D72B" = "709;288;320;550"
+	"picker_search_text.7E63D72B" = ""
+	"last_search.7E63D72B" = ""
+	"OpenInspectorPreview.7E63D72B" = "0"
+	"currentGroup.7E63D72B" = "all"
+	"last_search.E8DA15E5" = "gAME"
+	"OpenInspectorPreview.E8DA15E5" = "0"
+	"currentGroup.E8DA15E5" = "asset"
 }
 providers = {
 	asset = {
