地形算法优化

--- a/ThaumAge/packages.config
+++ b/ThaumAge/packages.config
@@ -4,4 +4,5 @@
   <package id="MonoGame.Framework.Portable" version="3.6.0.1625" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net471" />
   <package id="ShaderTools" version="1.0.2.1" targetFramework="net471" />
+  <package id="Vortice.ShaderCompiler" version="1.7.2" targetFramework="net471" />
 </packages>
