--- a/ThaumAge/Packages/manifest.json
+++ b/ThaumAge/Packages/manifest.json
@@ -1,21 +1,20 @@
 {
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.addressables": "1.21.19",
-    "com.unity.ai.navigation": "1.1.5",
-    "com.unity.burst": "1.8.11",
-    "com.unity.cinemachine": "2.9.5",
-    "com.unity.ide.rider": "3.0.27",
+    "com.unity.addressables": "1.21.20",
+    "com.unity.ai.navigation": "2.0.0",
+    "com.unity.burst": "1.8.13",
+    "com.unity.cinemachine": "3.0.1",
+    "com.unity.ide.rider": "3.0.28",
     "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.jobs": "0.11.0-preview.6",
-    "com.unity.render-pipelines.high-definition": "14.0.9",
-    "com.unity.test-framework": "2.0.1-pre.18",
-    "com.unity.textmeshpro": "3.2.0-pre.2",
-    "com.unity.timeline": "1.7.6",
-    "com.unity.ugui": "1.0.0",
+    "com.unity.render-pipelines.high-definition": "16.0.5",
+    "com.unity.timeline": "1.8.6",
+    "com.unity.ugui": "2.0.0",
+    "com.unity.visualscripting": "1.8.0",
     "jillejr.newtonsoft.json-for-unity": "13.0.102",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
